# guidance-for-personalized-ecommerce-recommendations-using-amazon-bedrock-agents

./: .gitignore  README.md  app.py  requirements-dev.txt  requirements.txt
.hypothesis/constants/: 031fe350771aff11  119561d805554ec3  862bdf69e2f208b0  d7a459a300272414
agent-core/: .cdkignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  buildspec.yml  chat_cli.py  check_builds.py  check_logs.py  check_logs_full.py  check_runtime_arn.py  config.py  deploy.sh  invoke_sales_agent.py  list_agentcore_runtimes.py  list_and_invoke_runtime.py  memory.py  pyproject.toml  pytest.ini  redeploy.py  requirements.txt  test_http_invoke.py  test_invoke.py  test_invoke_runtime.py  trigger_build.py  update_runtime.py
agent-core/cdk/: .gitkeep  (+4 more)
agentcore-runtime/: .env.example  README.md  agent.py  cdk-outputs.json  config.py  deploy.sh  pyproject.toml  requirements.txt  update.sh  update_runtime.sh
agentcore-runtime/.hypothesis/constants/: 031fe350771aff11  693bec986b189130  936b1ec9f061d682  cab5ef4a71330903  d7a459a300272414
agentcore-runtime/cdk/: agentcore_stack.py  app.py
agentcore-runtime/cdk/infra_utils/: agentcore_role.py
agentcore-runtime/cli/: __main__.py  sales_agent_cli.py  streaming.py
agentcore-runtime/tests/cli/: test_import_bug_condition.py  test_preservation.py  test_sales_agent_cli.py  test_streaming.py
import-data/: createIndex.py  embedding.py  image2Text.py
lambda/: handler.py
sales_agent/: sales_agent_stack.py
shopbot-demo/: .gitignore  README.md  mock_conversation.py  requirements.txt  start_shopbot_web.sh  view_llm_logs.py
(+117 files in other folders)
